# Assembly_Casper_project

./: Cargo.toml  README.md
erc20/: Cargo.toml
libs/: Cargo.toml
staking-rewards/: Cargo.toml
tests/: Cargo.toml  build.rs
tests/src/: erc20.rs  staking_rewards.rs
