[package]
name = "staking-rewards"
description = "Synthetix - StakingRewards contract written in Rust"
version = "0.1.0"
authors = ["Jihed CHALGHAF <chalghaf.jihed@gmail.com>"]
edition = "2018"


[dependencies]
contract = { package = "casper-contract", version="4.0.0" }
types = { package = "casper-types", version="4.0.1" }
libs = { path = "../libs" }
hex = "0.4.3"

[lib]
crate-type = ["cdylib"]
name = "staking_rewards"

[features]
default = ["contract/std", "types/std"]